feat: support ack template source
